code25_all/scala/14996237.txt
Scala code runner version 2.9.2-unknown-unknown -- Copyright 2002-2011, LAMP/EPFL
match-deep.scala
class Role
case object Manager extends Role
case object Developer extends Role

case class Person(name:String, age: Int, role: Role)

val alice = new Person("Alice", 25, Developer)
val bob = new Person("Bob", 32, Manager)
val charlie = new Person("Charlie", 32, Developer)

for( person <- List(alice, bob, charlie) ) {
  person match {
    case (id, p @ Person(_, _, Manager)) => println("%s is overpaid".format(p))
    case (id, p @ Person(_, _, _)) => println("%s is underpaid".format(p))
  }
}

match-deep.scala:13: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: this.Person
    case (id, p @ Person(_, _, Manager)) => println("%s is overpaid".format(p))
         ^
match-deep.scala:13: error: not found: value p
    case (id, p @ Person(_, _, Manager)) => println("%s is overpaid".format(p))
                                                                            ^
match-deep.scala:14: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2)
 required: this.Person
    case (id, p @ Person(_, _, _)) => println("%s is underpaid".format(p))
         ^
match-deep.scala:14: error: not found: value p
    case (id, p @ Person(_, _, _)) => println("%s is underpaid".format(p))

